# oci-imgspec-rs

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  mediatypes.rs
src/v1/: descriptor.rs  manifest.rs  manifest_list.rs  mod.rs
tests/: descriptor.rs  manifest.rs  manifest_list.rs
tests/fixtures/: example-descriptor1.json  example-descriptor2.json
