[package]
name = "oci-imgspec"
version = "0.0.1-dev"
authors = ["Luca Bruno <lucab@debian.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/camallo/oci-imgspec-rs"
description = "OCI Image Format Specification implementation"
keywords = ["oci", "container", "image-spec"]
exclude = [
".gitignore",
".travis.yml",
]


[dependencies]
error-chain = "0.10"
log = "0.3"
semver = "0.6"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
